[gd_scene load_steps=4 format=3 uid="uid://cswka6u6smllm"]

[ext_resource type="Script" uid="uid://exuowo75iehl" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Script" uid="uid://cpjo7n53d7sa6" path="res://scripts/OptionsMenu.gd" id="2"]

[sub_resource type="Theme" id="Theme_1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "NOSPHERATUS MUST DIE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "OPÇÕES"
horizontal_alignment = 1

[node name="AudioContainer" type="VBoxContainer" parent="OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="AudioTitle" type="Label" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer"]
layout_mode = 2
text = "Áudio"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume Geral: 100%"

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeContainer" type="HBoxContainer" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume Música: 80%"

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXVolumeContainer" type="HBoxContainer" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume Efeitos: 100%"

[node name="SFXVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/VBoxContainer/AudioContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="VideoContainer" type="VBoxContainer" parent="OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="VideoTitle" type="Label" parent="OptionsMenu/Panel/VBoxContainer/VideoContainer"]
layout_mode = 2
text = "Vídeo"

[node name="FullscreenButton" type="Button" parent="OptionsMenu/Panel/VBoxContainer/VideoContainer"]
layout_mode = 2
text = "Tela Cheia: Desligado"

[node name="VSyncButton" type="Button" parent="OptionsMenu/Panel/VBoxContainer/VideoContainer"]
layout_mode = 2
text = "V-Sync: Ligado"

[node name="BackButton" type="Button" parent="OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Voltar"

[node name="QuitDialog" type="AcceptDialog" parent="."]
title = "Sair do Jogo"
initial_position = 2
size = Vector2i(300, 100)
dialog_text = "Tem certeza que deseja sair do jogo?"
